@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(nano.c)
-AM_INIT_AUTOMAKE(nano, 0.9.14)
+AM_INIT_AUTOMAKE(nano, 0.9.14-cvs)
 AM_CONFIG_HEADER(config.h:config.h.in)
 ALL_LINGUAS="es de fr it id fi"
 
